  first added in ELinks 0.11.4, and the bug 620 fix in ELinks 0.12pre1
  made crashes more likely.)
* critical bug 1029 in user SMJS: Prefer JS_CallFunctionValue over
  JS_CallFunction, which can crash if given a closure.
* critical bug 1031: Use the same JSRuntime for both user SMJS and
  scripts on web pages, to work around SpiderMonkey bug 378918.
* minor bug 951: SpiderMonkey scripting objects used to prevent ELinks
  from removing files from the memory cache

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical: Fix crash after a tab was opened during reload.  This was
  triggered by the bug 620 fix in ELinks 0.12pre1.
* major bug 1026 in user SMJS: Protect the callback of elinks.load_uri
  from the garbage collector.  The elinks.load_uri method was added in
  ELinks 0.12pre1.
* bug 955: Reset buttons no longer run FORM/@onsubmit, and
  ``harmless'' buttons no longer submit the form.  ELinks 0.12pre1
  was the first release that had these bugs.
* bug 1033: Fix memory leak in ECMAScript window.open.  ELinks 0.12pre1
  was the first release that had this bug.
* Global ECMAScript functions alert, open, and setTimeout again work
  with SEE.  ELinks 0.12pre1 was the first release that supported SEE
  at all.

ELinks 0.12pre1:
----------------

Released on 2008-07-01.  This release also included all the bug fixes
of ELinks 0.11.4, but not the ones made in 0.11.4.GIT.

Notable new features:

* enhancement 822: UTF-8 as terminal charset, not merely UTF-8 I/O
  of a unibyte codepage as in previous versions.  Double-cell (aka
  fullwidth) and supplementary characters work too, but combining
  characters and right-to-left text do not.  The only multibyte
  charset ELinks can decode is still UTF-8, so if the server outputs
  e.g. Shift-JIS, you'd better recode with a proxy.  See more notes
  in features.conf.
* enhancement 844: SMB protocol using libsmbclient.  This replaces
  the smbclient-based code that was disabled in ELinks 0.11.2.
